# mythos

./: .gitignore  README.md  colab_act_curriculum.ipynb  colab_experiment.py  example.py  paper_draft.md  plot_results.py  pyproject.toml  run_experiment.py  run_overnight.py  test_main.py
.kiro/specs/act-curriculum-proof-extrapolation/: .config.kiro  design.md  requirements.md  tasks.md
open_mythos/: main.py
open_mythos/pipeline/: __init__.py  config.py  dataset.py  evaluator.py  gsm8k_dataset.py  logger.py  pipeline.py  profiler.py  sampler.py  scheduler.py  scorer.py
results/: halt_log_C.jsonl  run_A_results.json  run_B_results.json  run_C_results.json
