[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-mythos"
version = "0.1.0"
description = "A theoretical reconstruction of the Claude Mythos architecture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kye Gomez", email = "kye@apac.ai"}
]
keywords = ["artificial intelligence", "deep learning", "transformers", "recurrent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_mythos*"]

[tool.pytest.ini_options]
testpaths = ["tests", "test_main.py"]
python_files = ["test_*.py"]
